--- a/Pipfile
+++ b/Pipfile
@@ -7,6 +7,9 @@ verify_ssl = true
 pytest = "*"
 wheel = "*"
 setuptools = "*"
+model-mommy = "*"
+pytest-mock = "*"
+pytest-cov = "*"
 
 [packages]
 coloredlogs = "*"
