--- a/ssnapshot.service
+++ b/ssnapshot.service
@@ -2,7 +2,8 @@
 Description=ssnapshot is a service to create export slurm status information to the prometheus exporter
 
 [Service]
-ExecStart=/opt/ssnapshot/.venv/bin/ssnapshot -a -p --prometheus --daemonize --sleep 60 --outfile /var/lib/prometheus/node-exporter/ssnapshot.prom
+ExecStart=/opt/ssnapshot/.venv/bin/ssnapshot -a -p --prometheus --daemonize --sleep 120 --outfile /var/lib/prometheus/node-exporter/ssnapshot.prom
+Environment=PATH=/opt/slurm/bin
 Type=simple
 Restart=always
 
